# PatcherY

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
patchery/: __init__.py  __main__.py  aicc_patcher.py  deduplicator.py  patcher.py  ranker.py  utils.py
patchery/data/: __init__.py  function_resolver.py  poi.py  program.py
patchery/data/models/: __init__.py  aixcc_api.py  base.py  constraints.py  coverage.py  crash_reports.py  crs_reports.py  extended_aixcc_api.py  indexer.py  llvm_symbolizer.py  organizer_evaluation.py  oss_fuzz.py  oss_fuzz_runner_service.py  patch.py  submission.py  symbols.py  target.py
patchery/generator/: llm_patch_generator.py  llm_plan_patch_generator.py  llm_plan_strategy.py  llm_utils.py
patchery/kumushi/: poi_cluster_ranker.py  root_cause_analyzer.py  util.py
patchery/kumushi/aixcc/: aicc_program.py
patchery/kumushi/analyses/: analysis.py  call_trace.py  diffguy.py  stack_trace.py  variable_dependencies.py
patchery/kumushi/clustering/: cluster_generator.py
patchery/kumushi/code_parsing/: clang_cache.py  code.py  code_function.py  java_cache.py
patchery/kumushi/data/: program.py
patchery/kumushi/static_tools/: static_analysis.py
patchery/kumushi/tracing/: abstract_tracer.py  dumb_tracer.py  flexible_tracer.py  smart_tracer.py
patchery/verifier/: patch_verifier.py
patchery/verifier/verification_passes/: __init__.py  alert_elim_pass.py  base_verification_pass.py  func_verification_pass.py  fuzz_pass.py  ossfuzz_build_check_pass.py  (+2 more)
tests/: DISABLED_test_core.py  test_binary_patching.py  test_core.py
(+24 files in other folders)
